2007-11-18 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  rucola_generators/rucola_plugin/USAGE,
	  rucola_generators/rucola_plugin/rucola_plugin_generator.rb,
	  rucola_generators/rucola_plugin/templates/init.rb.erb,
	  test/test_rucola_plugin_generator.rb:

	- Add script/generate rucola_plugin for rucola apps

2007-11-18 Chris McGrath <chris@octopod.info>

	* test/test_plugin.rb:

	- Fix failing plugin test

2007-11-16 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/nib.rb,
	  test/test_nib.rb:

	Nib#add_class now takes an optional superclass.

2007-11-15 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  lib/rucola/initializer.rb,
	  lib/rucola/plugin.rb,
	  lib/rucola/tasks/main.rake,
	  test/test_plugin.rb:

	- Add the initial plugin code and hook it into the initializer
	- Make main.rake load tasks from vendor/plugins/*/tasks/*.rake

2007-11-14 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
		TODO,
	  lib/rucola/initializer.rb,
	  lib/rucola/tasks/databases.rake,
	  rucola_generators/activerecord_model/USAGE,
	  rucola_generators/activerecord_model/activerecord_model_generator.rb,
	  rucola_generators/activerecord_model/templates/database.yml.erb,
	  rucola_generators/activerecord_model/templates/model_create_migration.rb.erb,
	  rucola_generators/activerecord_model/templates/model_proxy_template.rb.erb,
	  rucola_generators/activerecord_model/templates/model_template.rb.erb,
	  test/test_activerecord_model_generator.rb:

	- Remove AR stuff as it's moving to a plugin

2007-11-14 Chris McGrath <chris@octopod.info>

	* Manifest.txt,
	  TODO:

	- Remove .rake_tasks from Manifest.txt
	- Remove some completed TODOs

2007-11-13 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/initializer.rb:

	Required the RCApp module, like Chris mentioned in r101.

2007-11-12 Justin Palmer <justin@activereload.net>

	* TODO,
	  lib/rucola/rucola_support/notifications/notifications.rb,
	  test/test_notifications.rb:
